--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ document.addEventListener('DOMContentLoaded', () => {
        KONFIGURASI PANEL (PUBLIC, PRIVATE, VVIP, ADMIN)
     ------------------------------------------------------------------ */
     const PUBLIC_PANEL_CONFIG = {
-        domain: "https://andri.anak.baru.server.private.lightsecretaja.web.id",
-        ptla: "ptla_Y0UWWjAxllIDd4aQQlbw0p0NS8et14UXmrpaVoKwyNW",
-        ptlc: "ptlc_DfaRzro3IKVGalZqbO8bIBOMS0J0kdSIR5gBk1SZVok",
+        domain: "https://crish.zhafiraahku.my.id",
+        ptla: "ptla_u6tqULlJA7Xzu3el1CHxgxkFCfpFnrjMk2KixHEc4U3",
+        ptlc: "ptlc_046DqUzrkRP1Gt3GmrxuOFOTFqckZLZt8CNyZaww9Qx",
         eggId: "15", nestId: "5", loc: "1"
     };
 
@@ -182,7 +182,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     const WEBSITE_ACCESS_KEY = "Andristore1";
 
-    const BASE_URL_PTERODACTYL_API = "https://restapi.mat.web.id/api/pterodactyl/create" +
+    const BASE_URL_PTERODACTYL_API = "https://crish.zhafiraahku.my.id/api/pterodactyl/create" +
         "?username=&ram=&disk=&cpu=&eggid=&nestid=&loc=&domain=&ptla=&ptlc=";
 
     const PACKAGES = {
